--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "syncyarnlock": "syncyarnlock -s -k && yarn install --check-files"
   },
   "dependencies": {
-    "@coreui/coreui": "~>2.1.16",
+    "@coreui/coreui": "4.0.0-alpha.5",
     "@fortawesome/fontawesome-free": "^5.15.1",
+    "@popperjs/core": "^2.9.2",
     "@rails/actioncable": "^6.1.3-2",
     "@rails/activestorage": "^6.1.3-2",
     "@rails/ujs": "^6.1.3-2",
@@ -15,7 +16,6 @@
     "@stimulus/polyfills": "^1.1.1",
     "bootstrap": "^4.5.3",
     "core-js": "^3.8.1",
-    "jquery": "^3.5.1",
     "perfect-scrollbar": "^1.5.0",
     "popper.js": "^1.16.1",
     "regenerator-runtime": "^0.13.7",
