gem and yarn upgrade

--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "@babel/runtime": "^7.17.9",
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@mixtint/coreui": "^2.1.16-2",
-    "@rails/actioncable": "^7.0.3",
-    "@rails/activestorage": "^7.0.3",
-    "@rails/ujs": "^7.0.3",
+    "@rails/actioncable": "~7.0.8",
+    "@rails/activestorage": "~7.0.8",
+    "@rails/ujs": "~7.0.8",
     "@stimulus/polyfills": "^2.0.0",
     "babel-loader": "^8.2.5",
     "bootstrap": "^4.6.1",
